test/types/range/unbounded/test_indefinite1.good
test_indefinite1.chpl:1: warning: The behavior of zippered serial loops driven by unbounded ranges has been fixed in this release to act as though they were conceptually infinite; to maintain the previous behavior, swap a bounded iterand into the first expression of the 'zip(...)'.
test_indefinite1.chpl:11: warning: The behavior of zippered serial loops driven by unbounded ranges has been fixed in this release to act as though they were conceptually infinite; to maintain the previous behavior, swap a bounded iterand into the first expression of the 'zip(...)'.
(2, 1)
(3, 2)
(4, 3)
(5, 4)
(6, 5)
test_indefinite1.chpl:1: error: zippered iterations have non-equal lengths
