test/types/range/unbounded/test_indefinite1.skipif
COMPOPTS <= --fast
COMPOPTS <= --no-checks
